--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ window.onerror = function(errorMsg, url, lineNumber) {
 
 		</footer>
 
-		<script type="text/javascript" src="Puzzle.js"></script>
+		<script type="text/javascript" src="puzzle.js"></script>
 
 		<script type="text/javascript">
 
