--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ window.onerror = function(errorMsg, url, lineNumber) {
 
 			<section>
 				<h3>Fork me on Github</h3>
-				<p>Jump to <a href="https://github.com/AvisekDas555">repository page</a>.</p>
+				<p>Jump to <a href="https://github.com/AvisekDas555/puzzle">repository page</a>.</p>
 			</section>
 
 			<section>
