--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ window.onerror = function(errorMsg, url, lineNumber) {
 
 			<section>
 				<h3>Fork me on Github</h3>
-				<p>Jump to <a href="https://github.com/AvisekDas555/puzzle">repository page</a>.</p>
+				<p>Goto <a href="https://github.com/AvisekDas555/puzzle">repository page</a>.</p>
 			</section>
 
 			<section>
@@ -207,12 +207,18 @@ window.onerror = function(errorMsg, url, lineNumber) {
 				<p>MIT</p>
 			</section>
 
+			<section>
+				<h3>Bugs?</h3>
+				<p><a href="https://github.com/AvisekDas555/puzzle/issues">File them</a></p>
+			</section>
+
 		</main>
 
 		<footer>
 
 			<div class="container">
-				<span class="text-muted">Made with <span class="love"></span> by Avi</span>
+				<a class="btn btn-success btn-sm float-right" href="https://github.com/AvisekDas555/puzzle/archive/master.zip">Download ZIP</a>
+				<p class="text-muted">Made with <span class="love"></span> by <a href="https://github.com/AvisekDas555">Avi</a></p>
 			</div>
 
 		</footer>
