--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 		<title>Puzzle</title>
 
+		<link rel="stylesheet" type="text/css" href="booter.css" />
 		<link rel="stylesheet" type="text/css" href="puzzle.css" />
 		<link rel="stylesheet" type="text/css" href="style.css" />
 
