--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ window.onerror = function(errorMsg, url, lineNumber) {
 			<section>
 				<h3>Getting Started</h3>
 				<p>Just include the needed CSS and JavaScript files, and you are ready to go!</p>
-				<pre>&lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;<a href="puzzle.js">puzzle.css</a>&quot; /&gt;
+				<pre>&lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;<a href="puzzle.css">puzzle.css</a>&quot; /&gt;
 &lt;script type=&quot;text/javascript&quot; src=&quot;<a href="puzzle.js">puzzle.js</a>&quot;&gt;&lt;/script&gt;
 
 &lt;script type=&quot;text/javascript&quot;&gt;
